--- a/index.html
+++ b/index.html
@@ -7,19 +7,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta name="keywords" content="Fotos destacadas, logo, portafolio, acerca de mi, contacto, naturaleza, fotos, carrusel">
+  <meta name="description" content="Explora una colección de fotos destacadas que capturan la belleza de la naturaleza y momentos inolvidables. Descubre paisajes increíbles, retratos emotivos y más. ¡Bienvenido a un viaje a través de la lente!">
+
+  <meta property="og:type" content="Portafolio de Fotografías">
+  <meta property="og:title" content="Portafolio de Fotografías">
+  <meta property="og:url" content="https://javidelsolar.github.io/Proyecto-fotografico/">
+  <meta property="og:img" content="https://github.com/JaviDelSolar/Proyecto-fotografico/blob/javi/img/logo3.png">
+  <meta property="og:description" content="Explora la belleza a través de nuestras fotografías, capturando momentos mágicos y paisajes impresionantes.">
+  
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="shortcut icon" href="./img/favicon-16x16.png" type="image/x-icon">
-  <title>Inicio</title>
+  <title>Portafolio de Fotografías - Inicio</title>
   <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <!-- Agrega tus metadatos, enlaces a hojas de estilo y otros elementos aquí -->
 </head>
+
 <body>
 
   <!-- Logo y navegación -->
@@ -47,7 +58,7 @@
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="2000">
-          <img src="./img/Banner.jpeg" class="d-block w-100" alt="banner 1" >
+          <img src="./img/Banner.jpeg" class="d-block w-100" alt="banner 1">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
           <img src="./img/LosMolles68.jpg" class="d-block w-100" alt="banner 2">
@@ -56,11 +67,13 @@
           <img src="./img/foto..jpg" class="d-block w-100" alt="banner 3">
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+        data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+        data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
