--- a/pages/acerca_de_mi.html
+++ b/pages/acerca_de_mi.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="keywords" content="Alexis, Muñoz, fotografia, historia, portafolio, porteño, naturaleza, colores">
+    <meta name="description" content="Bienvenido/a a mi mundo fotográfico. Soy Alexis Muñoz, un apasionado fotógrafo enamorado de los atardeceres y la belleza de la naturaleza. Descubre mi historia, mis experiencias bajo el lente y cómo encuentro la magia en cada momento. ¡Acompáñame en este viaje visual!">
+
+    <meta property="og:type" content="Acerca de mi">
+    <meta property="og:title" content="Acerca de mi">
+    <meta property="og:url" content="https://javidelsolar.github.io/Proyecto-fotografico/">
+    <meta property="og:img" content="https://github.com/JaviDelSolar/Proyecto-fotografico/blob/javi/img/logo3.png">
+    <meta property="og:description" content="Bienvenido/a a mi mundo fotográfico. Un apasionado fotógrafo enamorado de los atardeceres y la belleza de la naturaleza. Descubre mi historia, mis experiencias bajo el lente y cómo encuentro la magia en cada momento. ¡Acompáñame en este viaje visual!">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
