--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="keywords" content="contacto, formulario, email, nombre, apellido, mensaje, telefono, enviar">
+    <meta name="description" content="Explora el mundo a través de la lente de Alexis Muñoz, un apasionado fotógrafo porteño. Descubre su portafolio diverso, desde retratos que capturan la esencia humana hasta paisajes que revelan la magia de la naturaleza. Conéctate con Alexis, comparte su visión y déjate inspirar por la belleza en cada detalle. ¡Contacta ahora para colaboraciones o simplemente para compartir experiencias fotográficas!">
+
+    <meta property="og:type" content="Contacto">
+    <meta property="og:title" content="Contacto">
+    <meta property="og:url" content="https://javidelsolar.github.io/Proyecto-fotografico/">
+    <meta property="og:img" content="https://github.com/JaviDelSolar/Proyecto-fotografico/blob/javi/img/logo3.png">
+    <meta property="og:description" content="Explora el mundo a través de la lente de Alexis Muñoz, un apasionado fotógrafo porteño. Descubre su portafolio diverso, desde retratos que capturan la esencia humana hasta paisajes que revelan la magia de la naturaleza. Conéctate con Alexis, comparte su visión y déjate inspirar por la belleza en cada detalle. ¡Contacta ahora para colaboraciones o simplemente para compartir experiencias fotográficas!">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
