--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -7,8 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta name="keywords" content="portafolio, atardeceres, magicos, colores, naturaleza, retratos, viaje, desconocido, alma, fotografia">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <meta name="description" content="Explora un mundo de fotografía a través de mi portafolio. Desde atardeceres mágicos hasta retratos con alma, cada imagen cuenta una historia única. Descubre la belleza de la naturaleza y las expresiones humanas capturadas en cada instantánea. ¡Bienvenido a un viaje visual inolvidable con Alexis Muñoz Fotografía.">
+  
+  <meta property="og:type" content="Portafolio de Fotografías">
+  <meta property="og:title" content="Portafolio de Fotografías">
+  <meta property="og:url" content="https://javidelsolar.github.io/Proyecto-fotografico/">
+  <meta property="og:img" content="https://github.com/JaviDelSolar/Proyecto-fotografico/blob/javi/img/logo3.png">
+  <meta property="og:description" content="Explora un mundo de fotografía a través de mi portafolio. Desde atardeceres mágicos hasta retratos con alma, cada imagen cuenta una historia única. Descubre la belleza de la naturaleza y las expresiones humanas capturadas en cada instantánea. ¡Bienvenido a un viaje visual inolvidable con Alexis Muñoz Fotografía.">
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
   <link rel="stylesheet" href="../css/style.css">
   <title>Portafolio</title>
@@ -47,7 +54,7 @@
     <div class="galeria container justify-content-center">
       <div class="foto">
         <a href="../pages_portafolio/atardeceres_magicos.html"> 
-          <img src="../img/LosMolles68.jpg" alt="Foto">
+          <img src="../img/LosMolles68.jpg" alt="Atardeceres magicos">
           <div class="overlay">
             <h3>Atardeceres Mágicos</h3>
           </div>
@@ -55,7 +62,7 @@
       </div>
       <div class="foto">
         <a href="../pages_portafolio/viaje_a_lo_desconocido.html"> 
-          <img src="../img/LosMolles49.jpg" alt="Foto">
+          <img src="../img/LosMolles49.jpg" alt="Un Viaje a lo Desconocido">
           <div class="overlay">
             <h3>Un Viaje a lo Desconocido</h3>
           </div>
@@ -63,7 +70,7 @@
       </div>
       <div class="foto">
         <a href="../pages_portafolio/colores_naturaleza.html"> 
-          <img src="../img/LosMolles4.jpg" alt="Foto">
+          <img src="../img/LosMolles4.jpg" alt="Los Colores de la Naturaleza">
           <div class="overlay">
             <h3>Los Colores de la Naturaleza</h3>
           </div>
@@ -71,12 +78,12 @@
       </div>
       <div class="foto">
         <a href="../pages_portafolio/retratos.html"> 
-          <img src="../img/LosMolles41.jpg" alt="Foto">
+          <img src="../img/LosMolles41.jpg" alt="Retratos con Alma">
           <div class="overlay">
             <h3>Retratos con Alma</h3>
           </div>
         </a>
-      </div>
+      </div>      
     </div>
   </section>
 
