--- a/pages_portafolio/atardeceres_magicos.html
+++ b/pages_portafolio/atardeceres_magicos.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="keywords" content="atardeceres, fotografía, paisajes, naturaleza, viajes, magicos, colores, traquilidad">
+    <meta name="description" content="Descubre la magia de los atardeceres a través de la lente de Alexis Muñoz. Explora paisajes llenos de colores mágicos y tranquilidad. Una colección única de fotografías que capturan la belleza efímera del sol al despedirse cada día. ¡Sumérgete en un mundo de atardeceres inolvidables!">
+
+    <meta property="og:type" content="Atardeceres Mágicos">
+    <meta property="og:title" content="Atardeceres Mágicos">
+    <meta property="og:url" content="https://javidelsolar.github.io/Proyecto-fotografico/">
+    <meta property="og:img" content="https://github.com/JaviDelSolar/Proyecto-fotografico/blob/javi/img/logo3.png">
+    <meta property="og:description" content="Descubre la magia de los atardeceres a través de la lente de Alexis Muñoz. Explora paisajes llenos de colores mágicos y tranquilidad. Una colección única de fotografías que capturan la belleza efímera del sol al despedirse cada día. ¡Sumérgete en un mundo de atardeceres inolvidables!.">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
