--- a/pages_portafolio/colores_naturaleza.html
+++ b/pages_portafolio/colores_naturaleza.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="keywords" content="colores, naturaleza, fotografía, paisajes">
+    <meta name="description" content="Explora la belleza de la naturaleza a través de la lente de Alexis Muñoz. Descubre los colores vívidos de los bosques, los azules profundos de los océanos y los tonos cálidos de los atardeceres en esta colección única de fotografías. Sumérgete en una experiencia visual que captura la paleta de colores del mundo natural y humano.">
+
+    <meta property="og:type" content="Colores de la Naturaleza">
+    <meta property="og:title" content="Colores de la Naturaleza">
+    <meta property="og:url" content="https://javidelsolar.github.io/Proyecto-fotografico/">
+    <meta property="og:img" content="https://github.com/JaviDelSolar/Proyecto-fotografico/blob/javi/img/logo3.png">
+    <meta property="og:description" content="Explora la belleza de la naturaleza a través de la lente de Alexis Muñoz. Descubre los colores vívidos de los bosques, los azules profundos de los océanos y los tonos cálidos de los atardeceres en esta colección única de fotografías. Sumérgete en una experiencia visual que captura la paleta de colores del mundo natural y humano.">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
