--- a/pages_portafolio/retratos.html
+++ b/pages_portafolio/retratos.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="keywords" content="retratos, fotografía, retratos humanos, retratos">
+    <meta name="description" content="Explora la belleza y la complejidad del alma humana a través de la lente de Alexis Muñoz. Descubre una colección única de retratos que capturan la esencia de cada persona, mostrando su diversidad, sueños y emociones. Cada imagen es una ventana a la riqueza del alma humana, expresada a través de miradas, sonrisas y gestos.">
+
+    <meta property="og:type" content="Explora la Belleza de los Retratos">
+    <meta property="og:title" content="Explora la Belleza de los Retratos">
+    <meta property="og:url" content="https://javidelsolar.github.io/Proyecto-fotografico/">
+    <meta property="og:img" content="https://github.com/JaviDelSolar/Proyecto-fotografico/blob/javi/img/logo3.png">
+    <meta property="og:description" content="Explora la belleza y la complejidad del alma humana a través de la lente de Alexis Muñoz. Descubre una colección única de retratos que capturan la esencia de cada persona, mostrando su diversidad, sueños y emociones. Cada imagen es una ventana a la riqueza del alma humana, expresada a través de miradas, sonrisas y gestos.">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
