--- a/pages_portafolio/viaje_a_lo_desconocido.html
+++ b/pages_portafolio/viaje_a_lo_desconocido.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="keywords" content="viaje, lugares, desconocidos, naturaleza, fotografía, belleza, riqueza">
+    <meta name="description" content="Embárcate en un viaje visual a lo desconocido a través de las cautivadoras fotografías de Alexis Muñoz. Descubre la magia de lugares inexplorados, la belleza de la naturaleza y la riqueza de la vida capturada en cada imagen. Cada fotografía es una ventana a la maravilla de nuestro mundo, invitándote a explorar y apreciar la diversidad y la majestuosidad que nos rodea.">
+
+    <meta property="og:type" content="Un Viaje a lo desconocido">
+    <meta property="og:title" content="Un Viaje a lo desconocido">
+    <meta property="og:url" content="https://javidelsolar.github.io/Proyecto-fotografico/">
+    <meta property="og:img" content="https://github.com/JaviDelSolar/Proyecto-fotografico/blob/javi/img/logo3.png">
+    <meta property="og:description" content="Embárcate en un viaje visual a lo desconocido a través de las cautivadoras fotografías de Alexis Muñoz. Descubre la magia de lugares inexplorados, la belleza de la naturaleza y la riqueza de la vida capturada en cada imagen. Cada fotografía es una ventana a la maravilla de nuestro mundo, invitándote a explorar y apreciar la diversidad y la majestuosidad que nos rodea.">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
@@ -40,7 +48,8 @@
     <main>
         <div class=" titulo container text-center">
             <h3>Viaje a lo desconocido</h3>
-            <small class="text-body-secondary text-center">Te llevaremos a un viaje a través de lugares desconocidos. Cada imagen es una invitación a redescubrir la belleza que nos rodea y a
+            <small class="text-body-secondary text-center">Te llevaremos a un viaje a través de lugares desconocidos.
+                Cada imagen es una invitación a redescubrir la belleza que nos rodea y a
                 maravillarse con la riqueza de la naturaleza.</small>
         </div>
     </main>
@@ -50,7 +59,7 @@
             <a href="../img_portafolio/Lonquimay2023UVD-95.jpg" target="_blank">
                 <img src="../img_portafolio/Lonquimay2023UVD-95.jpg" alt="Explorando la naturaleza en Lonquimay 2023">
             </a>
-            
+
 
 
         </article>
